# JJ-VPN

./: Dockerfile  docker-compose.yml  pyproject.toml
scripts/: manage_xray.py
src/vpn/: main.py
src/vpn/api/: users.py
src/vpn/api/routes/: peers.py  users.py
src/vpn/core/: config.py  exceptions.py  security.py
src/vpn/db/: base.py  dependencies.py
src/vpn/db/models/: ip_pools.py  peers.py  subscriptions.py  transactions.py  users.py
src/vpn/repositories/: base.py  ip_pools.py  peers.py  transactions.py  users.py
src/vpn/repositories/mappers/: base.py  mappers.py
src/vpn/schemas/: balances.py  ip_pools.py  peers.py  transactions.py  users.py
src/vpn/services/: billing.py  peers.py  users.py
src/vpn/tasks/: billing_tasks.py  celery_app.py
