[tool.poetry]
name = "vpn"
version = "0.1.0"
description = "VPN backend"
authors = ["exl <levzavadskiy999@gmail.com>"]
packages = [{ include = "vpn", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.2.0"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
