[tool.poetry]
name = "vpn"
version = "0.1.0"
description = "VPN backend"
authors = ["exl <levzavadskiy999@gmail.com>"]
packages = [{ include = "vpn", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"
alembic = "^1.18.1"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
cryptography = "^46.0.3"
greenlet = "^3.3.1"
psycopg2-binary = "^2.9.11"
email-validator = "^2.3.0"
celery = "^5.6.2"
redis = "^7.2.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.2.0"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
